Remove unnecessary --add-opens for Felix framework